metade da aula 2

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nadoti Salon</title>
 
+    <!--ICONS-->
+    <link rel="stylesheet" href="pack icons/style.css" />
+
     <!--STYLES-->
     <link rel="stylesheet" href="style.css" />
 
@@ -21,7 +24,18 @@
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">Nadoti<span>Salon</span>.</a>
-        <div class="menu">...</div>
+        <!-- menu -->
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
+          </ul>
+        </div> <!-- /menu -->
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
 
@@ -35,7 +49,7 @@
             />
           </div>
           <div class="text">
-            <h1>Saúde natural para os seus cabelos</h1>
+            <h2 class="title">Saúde natural para os seus cabelos</h2>
             <p>
               Um salão exclusivo em São José do Rio Preto, especializado em
               tratamentos naturais.
@@ -46,10 +60,16 @@
       </section>
 
       <div class="divider-1"></div>
-
-      <section class="section">
-        <div class="container">outra sessão</div>
+      <section class="section" id="about">
+        <div class="container grid">Sobre</div>
       </section>
+
+      <section class="section" id="services">
+        <div class="container grid">Services</div>
+      </section>
+
     </main>
+
+    <script src="main.js"></script>
   </body>
 </html>
