fim da segunda aula

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container">
+      <nav class="container ">
         <a class="logo" href="#">Nadoti<span>Salon</span>.</a>
         <!-- menu -->
         <div class="menu">
@@ -60,13 +60,70 @@
       </section>
 
       <div class="divider-1"></div>
+
       <section class="section" id="about">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div class="image">
+            <img src="https://images.unsplash.com/photo-1581404788767-726320400cea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="mulheres realizando o atendimento em um salão de beleza">
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <header>
+              <p> <strong>NadotiSalon</strong> é uma equipe de profissionais da beleza, que dão um show de qualidade nos serviços e atendimentos. A equipe está pronta para atender os clientes nos locais de preferências, com o nosso perfil profissional.Toda empresa é guiada por políticas e conceitos administrativos, para ter serviços padrões e de alta qualidade. Todos da equipe passam por treinamentos e avaliações. Queremos realizar boas experiências para os nossos clientes.
+            </p></header>
+            <div class="purposes">
+              <br>
+              <h4 class="title">Missão</h4>
+              <p> Recrutar bons profissionais e manter a reciclagem profissional ativa. Permitir ao profissional estar em ordem de crescimento, realizando ótimos serviços aos clientes. Oferecer os serviços de salão beleza atualizados mundialmente.
+              </p>
+              <br>
+              <h4 class="title">Visão</h4>
+              <p> Organizar os atendimentos em geral, através de condutas empresariais, em busca de relacionar os serviços de beleza, em atendimentos personalizados a agenda do cliente.
+              </p>
+              <br>
+              <h4 class="title"> Valores</h4>
+              <p> Respeitar os limites e saber sobre condutas profissionais.
+              </p>
+          </div>
+          </div>
+        </div>
       </section>
 
+      <div class="divider-2"></div>
+
       <section class="section" id="services">
-        <div class="container grid">Services</div>
+        <div class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p> Com mais de 10 anos no mercado, o <strong>NadotiSalon</strong> já conquistou clientes de inúmeras cidades da região com seus tratamentos exclusivos e totalmente naturais!
+            </p>
+          </header>
+          <div class="cards grid">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
+              <h3 class="title">Terapia Capilar</h3>
+              <p> A terapia capilar consiste em métodos de prevenção e de tratamento de doenças relacionadas aos cabelos e ao couro cabeludo, na tentativa de minimizar agressões externas e corrigir eventuais desequilíbrios causados por procedimentos químicos.
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-trim"></i>
+              <h3 class="title">Cortes</h3>
+              <p> O Corte de cabelo é o que define o estilo visual dos cabelos e consequentemente, o estilo visual da pessoa. Acompanhar o design do corte, com a personalidade da pessoa, torna a mesma mais autentica e única, pois ela será representada por si mesma.
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
+              <h3 class="title">Tratamentos</h3>
+              <p> Os principais tratamentos realizados são: Hidratação capilar, nutrição, umectação, reconstrução, cauterização capilar, cronograma capilar, limpeza do couro cabeludo, reconstituição dos fios, lubrificação, hidratação do couro cabeludo, massagem, peeling capilar e fotobioestimulação.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
+
+      <div class="divider-1"></div>
+
+      <section class="section" id="testimonials"></section>
 
     </main>
 
