final da terceira aula

--- a/index.html
+++ b/index.html
@@ -222,7 +222,27 @@
         </div>
       </section>
 
+      <div class="divider-2"></div>
+
       <!-- CONTACT -->
+
+      <section class="section" id="contact">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente</h2>
+            <p>Entre em contato com a <strong>NadotiSalon</strong>, queremos tirar suas dúvidas, ouvir suas críticas e sugestões</p>
+            <a href="https://api.whatsapp.com/send?phone=+5517991296015&text=Olá!! Gostaria de agendar um horário." class="button" target="_blank"><i class="icon-whatsapp"></i>Entrar em contato</a>
+          </div>
+
+          <div class="links">
+            <ul class="grid">
+              <li><i class="icon-phone"></i>17 99129-6015</li>
+              <li><i class="icon-map-pin"></i>R. Jardim Secreto, 256</li>
+              <li><i class="icon-mail"></i>vinadoti@gmail.com</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- swiper -->
