Final da quarta aula

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Nadoti Salon</title>
 
     <!--ICONS-->
-    <link rel="stylesheet" href="pack icons/style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
 
     <!-- SWIPER -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
@@ -243,7 +243,33 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
+
     </main>
+
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home">Nadoti<span>Salon</span>.</a>
+          <p>©2021 NadotiSalon.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+        <div class="social">
+          <a href="#" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="#" target="_blank" >
+            <i class="icon-facebook"></i>
+          </a>
+          <a href="#" target="_blank" >
+            <i class="icon-twitter"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
 
     <!-- swiper -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
