final da quinta aula

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="assets/style.css" />
 
     <!-- SWIPER -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
 
     <!--STYLES-->
     <link rel="stylesheet" href="style.css" />
@@ -22,7 +25,6 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
   </head>
   <body>
     <header id="header">
@@ -60,7 +62,7 @@
               Um salão exclusivo em São José do Rio Preto, especializado em
               tratamentos naturais.
             </p>
-            <a class="button" href="#">Agendar um horário</a>
+            <a class="button" href="https://api.whatsapp.com/send?phone=+5517991296015&text=Olá!! Gostaria de agendar um horário." target="_blank">Agendar um horário </a>
           </div>
         </div>
       </section>
@@ -78,38 +80,21 @@
           </div>
           <div class="text">
             <h2 class="title">Sobre nós</h2>
-            <header>
               <p>
                 <strong>NadotiSalon</strong> é uma equipe de profissionais da
                 beleza, que dão um show de qualidade nos serviços e
-                atendimentos. A equipe está pronta para atender os clientes nos
-                locais de preferências, com o nosso perfil profissional.Toda
+                atendimentos. Toda
                 empresa é guiada por políticas e conceitos administrativos, para
                 ter serviços padrões e de alta qualidade. Todos da equipe passam
-                por treinamentos e avaliações. Queremos realizar boas
-                experiências para os nossos clientes.
+                por treinamentos e avaliações. 
               </p>
-            </header>
-            <div class="purposes">
               <br />
-              <h4 class="title">Missão</h4>
               <p>
-                Recrutar bons profissionais e manter a reciclagem profissional
-                ativa. Permitir ao profissional estar em ordem de crescimento,
-                realizando ótimos serviços aos clientes. Oferecer os serviços de
-                salão beleza atualizados mundialmente.
+                Nossa <strong>missão</strong> é oferecer os nossos serviços sempre da melhor forma. 
+                Nossa <strong>visão</strong> é organizar os atendimentos em geral, através de condutas empresariais, em busca de relacionar os serviços de beleza, em atendimentos personalizados a agenda do cliente. 
+                Nossos <strong>valores</strong> é respeitar os limites e saber sobre condutas profissionais. 
               </p>
               <br />
-              <h4 class="title">Visão</h4>
-              <p>
-                Organizar os atendimentos em geral, através de condutas
-                empresariais, em busca de relacionar os serviços de beleza, em
-                atendimentos personalizados a agenda do cliente.
-              </p>
-              <br />
-              <h4 class="title">Valores</h4>
-              <p>Respeitar os limites e saber sobre condutas profissionais.</p>
-            </div>
           </div>
         </div>
       </section>
@@ -121,7 +106,7 @@
         <div class="container grid">
           <header>
             <h2 class="title">Serviços</h2>
-            <p>
+            <p class="subtitle">
               Com mais de 10 anos no mercado, o <strong>NadotiSalon</strong> já
               conquistou clientes de inúmeras cidades da região com seus
               tratamentos exclusivos e totalmente naturais!
@@ -165,58 +150,81 @@
       </section>
 
       <div class="divider-1"></div>
-      
+
       <!-- TESTIMONIALS -->
       <section class="section" id="testimonials">
         <div class="container">
           <header>
             <h2 class="title">Depoimentos de quem já passou por aqui</h2>
           </header>
-            <div class="testimonials swiper">
-              <div class="swiper-wrapper">
-                <div class="testimonial swiper-slide">
-                  <blockquote>
-                    <p>
-                      <span>&ldquo;</span>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit voluptates inventore expedita illo itaque laudantium nihil. Non, exercitationem libero, necessitatibus ea sed rem earum, obcaecati esse assumenda animi cumque incidunt.
-                    </p>
-                    <cite>
-                      <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Wanessa Souza">
-                      Wanessa Souza
-                    </cite>
-                  </blockquote>
-                </div>
-                
-                <div class="testimonial swiper-slide">
-                  <blockquote>
-                    <p>
-                      <span>&ldquo;</span>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit voluptates inventore expedita illo itaque laudantium nihil. Non, exercitationem libero, necessitatibus ea sed rem earum, obcaecati esse assumenda animi cumque incidunt.
-                    </p>
-                    <cite>
-                      <img src="https://randomuser.me/api/portraits/women/89.jpg" alt="Adriana Souza">
-                      Adriana Souza
-                    </cite>
-                  </blockquote>
-                </div>
-  
-                <div class="testimonial swiper-slide">
-                  <blockquote>
-                    <p>
-                      <span>&ldquo;</span>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit voluptates inventore expedita illo itaque laudantium nihil. Non, exercitationem libero, necessitatibus ea sed rem earum, obcaecati esse assumenda animi cumque incidunt.
-                    </p>
-                    <cite>
-                      <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Ana Laura">
-                      Ana Laura
-                    </cite>
-                  </blockquote>
-                </div>
-                <!--If we need pagination-->
-            <div class="swiper-pagination"></div>
+          <div class="testimonials swiper">
+            <div class="swiper-wrapper">
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Só tenho a agradecer pelo excelente atendimento do NadotiSalon, minha autoestima nunca esteve tão forte haha <3
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/44.jpg"
+                      alt="Wanessa Souza"
+                    />
+                    Wanessa Souza
+                  </cite>
+                </blockquote>
               </div>
 
-              <!-- If we need pagination -->
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Com certeza o melhor salão que já fui. Resolveu meus problemas com a terapia capilar ! Gratidão
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/89.jpg"
+                      alt="Adriana Souza"
+                    />
+                    Adriana Souza
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Sempre tive receio te ir no salão mas depois que fui no NadotiSalon percebi que não preciso mais ter medo, mudou minha vida, obrigada a equipe vocês foram incriveis, ganharam uma cliente !!
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/68.jpg"
+                      alt="Ana Laura"
+                    />
+                    Ana Laura
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Não sei o que falar, apenas sentir !! O melhor salão de todoooos, meu cabelo está maravilhoso. Recomendo de olhos fechados !!
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/8.jpg"
+                      alt="Camila Freitas"
+                    />
+                    Camila Freitas
+                  </cite>
+                </blockquote>
+              </div>
+
+            </div>
+            <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
           </div>
         </div>
@@ -230,8 +238,16 @@
         <div class="container grid">
           <div class="text">
             <h2 class="title">Entre em contato com a gente</h2>
-            <p>Entre em contato com a <strong>NadotiSalon</strong>, queremos tirar suas dúvidas, ouvir suas críticas e sugestões</p>
-            <a href="https://api.whatsapp.com/send?phone=+5517991296015&text=Olá!! Gostaria de agendar um horário." class="button" target="_blank"><i class="icon-whatsapp"></i>Entrar em contato</a>
+            <p>
+              Entre em contato com a <strong>NadotiSalon</strong>, queremos
+              tirar suas dúvidas, ouvir suas críticas e sugestões
+            </p>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5517991296015&text=Olá!! Gostaria de agendar um horário."
+              class="button"
+              target="_blank"
+              ><i class="icon-whatsapp"></i>Entrar em contato</a
+            >
           </div>
 
           <div class="links">
@@ -245,9 +261,9 @@
       </section>
 
       <div class="divider-1"></div>
-
     </main>
 
+    <!-- footer -->
     <footer class="section">
       <div class="container grid">
         <div class="brand">
@@ -255,14 +271,15 @@
           <p>©2021 NadotiSalon.</p>
           <p>Todos os direitos reservados.</p>
         </div>
-        <div class="social">
-          <a href="#" target="_blank">
+
+        <div class="social grid">
+          <a href="https://www.instagram.com/viviannadoti/" target="_blank">
             <i class="icon-instagram"></i>
           </a>
-          <a href="#" target="_blank" >
+          <a href="https://www.facebook.com/vivian.nadoti/" target="_blank">
             <i class="icon-facebook"></i>
           </a>
-          <a href="#" target="_blank" >
+          <a href="https://twitter.com/vinadoti" target="_blank">
             <i class="icon-twitter"></i>
           </a>
         </div>
@@ -274,8 +291,8 @@
     <!-- swiper -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-     <!-- scrollreveal -->
-     <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- scrollreveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- main.js -->
     <script src="main.js"></script>
